--- a/cab-service-driver/src/main/resources/application.properties
+++ b/cab-service-driver/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=cab-service-driver
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+
+logging.level.root=INFO
+
+# Kafka consumer logging level
+logging.level.org.apache.kafka=DEBUG
+logging.level.org.springframework.kafka=DEBUG
