--- a/cab-service-user/src/main/resources/application.properties
+++ b/cab-service-user/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.group-id=user-group
+
+logging.level.root=INFO
+
+# Kafka consumer logging level
+logging.level.org.apache.kafka=DEBUG
+logging.level.org.springframework.kafka=DEBUG
